<resources>
    <string name="app_name">Rememora</string>

    <string name="label_buttom_img">Fotos</string>
    <string name="label_buttom_video">Vídeos</string>
    <string name="label_buttom_audio">Audios</string>
    <string name="label_buttom_music">Música</string>


    <string name="label_buttom_next">Siguiente</string>
    <string name="label_buttom_back">Anterior</string>
    <string name="label_buttom_play">Reproducir</string>
    <string name="label_buttom_pause">Pausar</string>
    <string name="label_buttom_repeat">REPETIR</string>


    <string name="label_title">REMEMORA</string>

    <string name="label_buttom_ayuda">Ayuda</string>

    <!-- Errores -->
    <string name="content_description_error">Una imagen representando que hay un error</string>
    <string name="title_button_error">Reintentar</string>
    <string name="title_data_error">Error en la obtención de datos</string>
    <string name="description_data_error">Lo sentimos, hemos tenido dificultades al intentar recuperar la información en este momento. Por favor, inténtalo de nuevo más tarde. Si el problema persiste, contacta con nuestro soporte técnico para obtener ayuda</string>
    <string name="title_internet_error">¿Tienes conexión a Internet?</string>
    <string name="description_internet_error">Lo siento, parece que estas experimentando problemas de conexión. Por favor, verifica tu conexión a Internet y vuelve a intentarlo.</string>
    <string name="title_unknown_error">Error inesperado</string>
    <string name="description_unknown_error">¡Ups! Algo salió mal y encontramos un error inesperado. Lamentamos las molestias. Nuestro equipo está trabajando para solucionar este problema. Por favor, inténtalo de nuevo más tarde. Si el problema persiste, ponte en contacto con nuestro soporte técnico para obtener ayuda.</string>

    <string name="label_button_login">Identificate con Google</string>
    <string name="label_button_cancel">Cancelar</string>
    <string name="label_button_logout">Cerrar sesión</string>
    <string name="label_button_delete_account">Eliminar cuenta</string>
    <string name="label_login">Para poder disfrutar de Rememora necesitamos que te identifiques con tu cuenta de Google. Solo guardaremos tu email para que puedas gestionar tu contenido.</string>
    <string name="label_unknown_error">Se ha producido un error inesperado, por favor vuelve a intentarlo.</string>

    <!-- tutorial photos -->
    <string name="tutorial_title_photo">Pulsa aquí para ver fotos.</string>
    <string name="tutorial_description_photo"> </string>

    <string name="shortcut_photo_label">Fotos</string>
    <string name="shortcut_videos_label">Videos</string>
    <string name="shortcut_music_label">Musica</string>
    <string name="shortcut_audios_label">Audios</string>
    <string name="no_voice_permissions">Lo siento, tu dispositivo no admite entrada de voz</string>
    <string name="extra_prompt_recognizer">Dime qué quieres hacer</string>
    <string name="voice_response_command_not_exist">Comando no disponible</string>
    <string name="voice_response_first_picture">Estás viendo la primera imagen</string>
    <string name="voice_response_last_picture">Estás viendo la última imagen</string>
    <string name="voice_response_first">Estás en el primero</string>
    <string name="voice_response_last">Estás en el último</string>
    <string name="voice_response_play">Ya se está reproduciendo</string>
    <string name="voice_response_pause">Ya está pausado</string>
    <string name="voice_response_fragment_music">Ya está en música</string>
    <string name="voice_response_fragment_audio">Ya está en audios</string>
    <string name="voice_response_fragment_video">Ya está en vídeos</string>
    <string name="voice_response_fragment_photo">Ya está en fotos</string>
    <string name="voice_response_ok">vale</string>
    <string name="command_next">siguiente</string>
    <string name="command_previous">anterior</string>
    <string name="command_music">música</string>
    <string name="command_audio">audios</string>
    <string name="command_video">vídeos</string>
    <string name="command_photos">fotos</string>
    <string name="command_play">reproducir</string>
    <string name="command_pause">pausar</string>
    <string name="fragment_name_audio">audio</string>
    <string name="fragment_name_video">video</string>
    <string name="fragment_name_music">music</string>
    <string name="deeplink_photos">rememora://images</string>
    <string name="deeplink_videos">rememora://videos</string>
    <string name="deeplink_music">rememora://music</string>
    <string name="deeplink_audio">rememora://audio</string>
    <string name="action_deeplink">android.intent.action.VIEW</string>

    <string name="language">es</string>
    <string name="country">ES</string>

    <string name="keyword_1">rememora</string>
    <string name="keyword_2">hola</string>
    <string name="keyword_3">oye</string>
    <string name="keyword_4">ey</string>

    <string name="prompt_home">Tengo una aplicación llamada Rememora con los siguientes botones: fotos,
        vídeos, música y audios. Si el usuario dice lo siguiente: "%s", ¿cuál es el botón que debe de pulsar?
        Tu respuesta debe de ser el nombre del botón y, si no hay botón para lo que quiere hacer o no se
        entiende, una frase o pregunta corta. </string>

    <string name="prompt_images">Tengo una aplicación llamada Rememora con los siguientes botones: fotos,
        vídeos, música, audios, siguiente y anterior. Si el usuario se encuentra viendo fotos y dice
        lo siguiente: "%s", ¿cuál es el botón que debe de pulsar?
        Tu respuesta debe de ser el nombre del botón y, si no hay botón para lo que quiere hacer o no se
        entiende, una frase o pregunta corta. </string>

    <string name="prompt_videos">Tengo una aplicación llamada Rememora con los siguientes botones: fotos,
        vídeos, música, audios, siguiente, anterior, pausar y reproducir. Si el usuario se encuentra viendo
        vídeos y dice lo siguiente: "%s", ¿cuál es el botón que debe de pulsar?
        Tu respuesta debe de ser el nombre del botón y, si no hay botón para lo que quiere hacer o no se
        entiende, una frase o pregunta corta. </string>

    <string name="prompt_audios">Tengo una aplicación llamada Rememora con los siguientes botones: fotos,
        vídeos, música, audios, siguiente, anterior, pausar y reproducir. Si el usuario se encuentra viendo
        audios y dice lo siguiente: "%s", ¿cuál es el botón que debe de pulsar?
        Tu respuesta debe de ser el nombre del botón y, si no hay botón para lo que quiere hacer o no se
        entiende, una frase o pregunta corta. </string>

    <string name="prompt_music">Tengo una aplicación llamada Rememora con los siguientes botones: fotos,
        vídeos, música, audios, siguiente, anterior, pausar y reproducir. Si el usuario se encuentra viendo
        música y dice lo siguiente: "%s", ¿cuál es el botón que debe de pulsar?
        Tu respuesta debe de ser el nombre del botón y, si no hay botón para lo que quiere hacer o no se
        entiende, una frase o pregunta corta. </string>


</resources>