<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <capability android:name="actions.intent.OPEN_APP_FEATURE">
        <intent>
            <url-template android:value="rememora://{feature}" />
            <parameter
                android:name="feature"
                android:key="feature" />
        </intent>
    </capability>

    <shortcut
        android:shortcutId="images"
        android:shortcutShortLabel="@string/shortcut_photo_label">
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding
                android:key="feature"
                android:value="@array/photos_synonyms" />
        </capability-binding>
    </shortcut>

    <shortcut
        android:shortcutId="videos"
        android:shortcutShortLabel="@string/shortcut_videos_label">
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding
                android:key="feature"
                android:value="@array/videos_synonyms" />
        </capability-binding>
    </shortcut>

    <shortcut
        android:shortcutId="music"
        android:shortcutShortLabel="@string/shortcut_music_label">
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding
                android:key="feature"
                android:value="@array/music_synonyms" />
        </capability-binding>
    </shortcut>

    <shortcut
        android:shortcutId="audio"
        android:shortcutShortLabel="@string/shortcut_audios_label">
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding
                android:key="feature"
                android:value="@array/audios_synonyms" />
        </capability-binding>
    </shortcut>

</shortcuts>