<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_bottom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/spacing_vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginVertical="@dimen/spacing_vertical"
        android:id="@+id/bottomButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/media_view"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="@dimen/layout_width_menu_bottom"
            android:layout_height="@dimen/layout_height_menu_bottom"
            android:text="@string/label_buttom_back"
            style="@style/MediaButtonStyle" />

        <Button
            android:id="@+id/pause_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/back_button"
            app:layout_constraintEnd_toStartOf="@id/play_button"
            android:layout_width="@dimen/layout_width_menu_bottom"
            android:layout_height="@dimen/layout_height_menu_bottom"
            style="@style/MediaButtonStyle"
            android:text="@string/label_buttom_pause" />

        <Button
            android:id="@+id/play_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/pause_button"
            app:layout_constraintEnd_toStartOf="@id/next_button"
            android:layout_width="@dimen/layout_width_menu_bottom"
            android:layout_height="@dimen/layout_height_menu_bottom"
            style="@style/MediaButtonStyle"
            android:text="@string/label_buttom_play" />

        <Button
            android:id="@+id/next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="@dimen/layout_width_menu_bottom"
            android:layout_height="@dimen/layout_height_menu_bottom"
            android:text="@string/label_buttom_next"
            style="@style/MediaButtonStyle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.media3.ui.PlayerView
        android:id="@+id/media_view"
        app:use_controller="false"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomButtonContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
