<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_bottom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/spacing_vertical">

    <androidx.media3.ui.PlayerView
        android:id="@+id/media_view"
        app:use_controller="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/play_pause_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:artwork_display_mode="fit" />

    <Button
        android:id="@+id/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="@dimen/layout_width_menu_bottom"
        android:layout_height="@dimen/layout_height_menu_bottom"
        android:text="@string/label_buttom_back"
        android:textSize="@dimen/size_title_buttom_menu" />

    <Button
        android:id="@+id/play_pause_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="@dimen/layout_width_menu_bottom"
        android:layout_height="@dimen/layout_height_menu_bottom"
        android:text="@string/label_buttom_pause"
        android:textSize="@dimen/size_title_buttom_menu" />

    <Button
        android:id="@+id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="@dimen/layout_width_menu_bottom"
        android:layout_height="@dimen/layout_height_menu_bottom"
        android:text="@string/label_buttom_next"
        android:textSize="@dimen/size_title_buttom_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
