<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.home.presentation.HomeActivity">

    <LinearLayout
        android:id="@+id/layout_menu"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="?attr/colorPrimaryContainer"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/size_padding_horizontal_menu"
        app:layout_constraintBottom_toTopOf="@id/layout_help"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.camera.view.PreviewView
            android:id="@+id/viewFinder"
            android:layout_width="150dp"
            android:layout_height="150dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_image"
            android:layout_width="@dimen/width_size_menu_button"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_vertial_menu_button"
            android:paddingVertical="@dimen/padding_vertical_menu_button"
            android:text="@string/label_buttom_img"
            android:textSize="@dimen/size_title_buttom_menu" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_video"
            android:layout_width="@dimen/width_size_menu_button"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_vertial_menu_button"
            android:paddingVertical="@dimen/padding_vertical_menu_button"
            android:text="@string/label_buttom_video"
            android:textSize="@dimen/size_title_buttom_menu" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_musica"
            android:layout_width="@dimen/width_size_menu_button"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_vertial_menu_button"
            android:paddingVertical="@dimen/padding_vertical_menu_button"
            android:text="@string/label_buttom_music"
            android:textSize="@dimen/size_title_buttom_menu" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_audio"
            android:layout_width="@dimen/width_size_menu_button"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_vertial_menu_button"
            android:paddingVertical="@dimen/padding_vertical_menu_button"
            android:text="@string/label_buttom_audio"
            android:textSize="@dimen/size_title_buttom_menu" />

    </LinearLayout>


    <FrameLayout
        android:id="@+id/layout_help"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/layout_menu"
        app:layout_constraintStart_toStartOf="@id/layout_menu">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_ayuda"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/margin_vertial_menu_button"
            android:paddingVertical="@dimen/padding_vertical_menu_button"
            android:text="@string/label_buttom_ayuda"
            android:textSize="@dimen/size_title_buttom_menu"
            android:visibility="gone" />

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/action_account"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginHorizontal="@dimen/size_padding_horizontal_menu"
            android:layout_marginVertical="@dimen/spacing_vertical"
            android:src="@drawable/ic_account" />

    </FrameLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/spacing_horizontal"
        android:layout_marginVertical="@dimen/spacing_vertical"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/layout_menu"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/nav_graph" />

</androidx.constraintlayout.widget.ConstraintLayout>