<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/menu_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="100dp"
            android:layout_marginBottom="220dp"
            android:layout_marginTop="70dp"
            tools:src="@drawable/rememora2"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/menu_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingVertical="50dp">

            <Button
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/back_button"
                android:layout_width="@dimen/layout_width_menu_bottom"
                android:layout_height="@dimen/layout_height_menu_bottom"
                android:text="@string/label_buttom_back"
                android:textSize="@dimen/size_title_buttom_menu"
                android:layout_marginHorizontal="@dimen/size_padding_horizontal_menu_bottom"/>

            <Button
                app:layout_constraintStart_toEndOf="@id/back_button"
                app:layout_constraintEnd_toStartOf="@id/next_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/repeat_button"
                android:layout_width="@dimen/layout_width_menu_bottom"
                android:layout_height="@dimen/layout_height_menu_bottom"
                android:text="@string/label_buttom_repeat"
                android:textSize="@dimen/size_title_buttom_menu"
                android:layout_marginHorizontal="@dimen/size_padding_horizontal_menu_bottom"/>
            <Button
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/next_button"
                android:layout_width="@dimen/layout_width_menu_bottom"
                android:layout_height="@dimen/layout_height_menu_bottom"
                android:text="@string/label_buttom_next"
                android:textSize="@dimen/size_title_buttom_menu"
                android:layout_marginHorizontal="@dimen/size_padding_horizontal_menu_bottom"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>